2022-08-12 클래스명 변경 및 이동된 유틸함수 사용 경로 수정, 코드 정렬